# MLOps-HW

./: .gitignore  .pre-commit-config.yaml  README.md  convert_model.py  infer.py  pyproject.toml  report_triton.md  run_model.bat  run_server.bat  run_server.py  test_triton.bat  train.py  triton_client.py  triton_container.bat
.dvc/: config
configs/: config.yaml
data/: prediction.csv.dvc  prediction_onnx.csv
data/examples/: .gitignore  mnist_examples.csv.dvc
data/test/: mnist_test.csv.dvc
data/train/: mnist_train.csv.dvc
mnist/: infer.py  manage_dvc.py  train.py
mnist/datasets/: dataset.py
mnist/models/: dataset.py  model.onnx.dvc  model.pth.dvc  model.py
mnist/utils/: utils.py
server/: build.bat  docker-compose.yml  model_mlflow.py  test_examples.py
tracking-server/: docker-compose.yaml  mlflow.conf
tracking_server/: docker-compose.yaml
triton_backend/: Dockerfile  docker-compose.yaml  triton_client.py
triton_backend/model_repository/mnist-onnx/: config.pbtxt
