[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "Homework for the MLOps course"
authors = ["KamillaZyal <85340058+KamillaZyal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pytorch-lightning = "2.1.3"
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.0"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
torchvision = "^0.16.2"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
dvc = {extras = ["gdrive"], version = "^3.38.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "hug"
py_version=310

[tool.flake8]
max-line-length = 90
exclude = [".git", "__pycache__"]
max-complexity = 10
